--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -1,1 +1,15 @@
-@import "node_modules/bootstrap/scss/bootstrap"
+@import "node_modules/bootstrap/scss/bootstrap";
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Now', sans-serif;
+}
+
+p {
+    font-family: 'Poppins', sans-serif;
+}
