feat: add image in RestaurantList and SingleRestaurant

--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -10,6 +10,10 @@ body {
     font-family: 'Now', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 p {
     font-family: 'Poppins', sans-serif;
 }
